--- a/Biuro_Podrozy/Views/Account/Login.cshtml
+++ b/Biuro_Podrozy/Views/Account/Login.cshtml
@@ -8,23 +8,27 @@
 
 <div class="text-danger" asp-validation-summary="All"></div>
 
-<div class="border rounded w-25 p-3 d-flex justify-content-center align-items-center">
-    <form asp-action="Login" asp-controller="Account" method="post">
-        <input type="hidden" asp-for="ReturnUrl" />
-        <div class="form-group">
-            <label asp-for="Name">Nazwa użytkownika</label>
-            <div>
-                <span asp-validation-for="Name" class="text-danger"></span>
+<div class="d-flex justify-content-center align-items-center">
+    <div class="border rounded w-25 p-3">
+        <form asp-action="Login" asp-controller="Account" method="post">
+            <input type="hidden" asp-for="ReturnUrl" />
+            <div class="form-group">
+                <label asp-for="Name">Nazwa użytkownika</label>
+                <div>
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+                <input asp-for="Name" class="form-control" />
             </div>
-            <input asp-for="Name" class="form-control" />
-        </div>
-        <div class="form-group">
-            <label asp-for="Password">Hasło</label>
-            <div>
-                <span asp-validation-for="Password" class="text-danger"></span>
+            <div class="form-group">
+                <label asp-for="Password">Hasło</label>
+                <div>
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+                <input asp-for="Password" class="form-control" />
             </div>
-            <input asp-for="Password" class="form-control" />
-        </div>
-        <button class="btn btn-primary" type="submit">Zaloguj</button>
-    </form>
+            <button class="btn btn-primary" type="submit">Zaloguj</button>
+        </form>
+        
+        <a asp-action="Register">Nie masz konta? Zarejestruj się</a>
+    </div>
 </div>
