--- a/Biuro_Podrozy/Views/Shared/_Layout.cshtml
+++ b/Biuro_Podrozy/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - Biuro_Podrozy - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - Biuro_Podrozy - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>- Nr albumu: <b>13413</b>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
