--- a/Biuro_Podrozy/Views/Biuro/Panel.cshtml
+++ b/Biuro_Podrozy/Views/Biuro/Panel.cshtml
@@ -15,16 +15,22 @@ Witaj! Twoje narzędzia:
     <a class="btn btn-primary" asp-action="BiuroListAdmin" asp-controller="Biuro">Zarządzaj biurem</a>
 </div>
 
-<div>
+<div class="m-2">
     <h2>Wyloty</h2>
     <a class="btn btn-primary" asp-action="AddForm" asp-controller="Biuro">Dodaj miasto</a>
     <a class="btn btn-primary" asp-action="BiuroListAdmin" asp-controller="Biuro">Zarządzaj miastami</a>
 </div>
 
-<div>
+<div class="m-2">
     <h2>Zdjęcia</h2>
     <a class="btn btn-primary" asp-action="AddForm" asp-controller="Biuro">Dodaj zdjęcie</a>
     <a class="btn btn-primary" asp-action="BiuroListAdmin" asp-controller="Biuro">Zarządzaj zdjęciami</a>
+
+</div class="m-2">
+
+<div class="m-2">
+    <h2>Rezerwacje</h2>
+    <a class="btn btn-primary" asp-action="BiuroListAdmin" asp-controller="Biuro">Zarządzaj rezerwacjami</a>
 
 </div>
 
