--- a/Biuro_Podrozy/Views/Biuro/AddForm.cshtml
+++ b/Biuro_Podrozy/Views/Biuro/AddForm.cshtml
@@ -27,6 +27,12 @@
             <label>Data:</label>
             <input class="form-control" asp-for="TravelDate" />
         </div>
+
+        <div class="mb-3">
+            <label>Numer_Zdjecia:</label>
+            <input class="form-control" asp-for="Photos.PhotoId" />
+        </div>
+
         <button type="submit" class="btn btn-primary">Zapisz</button>
     </form>
 </div>
