--- a/Biuro_Podrozy/Views/Biuro/BookForm.cshtml
+++ b/Biuro_Podrozy/Views/Biuro/BookForm.cshtml
@@ -3,6 +3,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    
 }
 
 <div class="container-fluid m-md-2 w-50">
@@ -55,13 +56,17 @@
             <input class="form-control" asp-for="PhoneNumber" />
         </div>
 
-            <div class="mb-2">
-                <label>Data urodzenia:</label>
-                <span asp-validation-for="DateofBirth" class="text-danger"></span>
-                <input class="form-control" asp-for="DateofBirth" />
-            </div>
-            <button class="btn btn-primary" type="submit">Prześlij dane</button>
+        <div class="mb-2">
+            <label>Data urodzenia:</label>
+            <span asp-validation-for="DateofBirth" class="text-danger"></span>
+            <input class="form-control" asp-for="DateofBirth" />
+        </div>
 
+        <div class="mb-2">
+            <label>Id:</label>
+            <input class="form-control" asp-for="BiuroItem.Id" />
+        </div>
+        <button class="btn btn-primary" type="submit">Prześlij dane</button>
     </form>
 
 </div>
