--- a/Biuro_Podrozy/Views/Biuro/BookInfo.cshtml
+++ b/Biuro_Podrozy/Views/Biuro/BookInfo.cshtml
@@ -3,13 +3,14 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    var cena = @Model.Seats * @Model.Price;
 }
+
+<p>@Model.Books.Count()</p>
 
 <h1>Wybrana przez ciebie podróż</h1>
 <div asp-action="BookInfo">
     <div>
-        <h4>Miejsce podróży: @Model.TravelPlace</h4>
+        <h4>Miejsce podróży: @Model.TravelPlace o identyfikatorze @Model.Id</h4>
     </div>
 </div>
 
