--- a/Biuro_Podrozy/Views/Biuro/AddForm.cshtml
+++ b/Biuro_Podrozy/Views/Biuro/AddForm.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Biuro_Podrozy.Models.BiuroItem
+
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
@@ -32,6 +33,11 @@
             <label>Numer_Zdjecia:</label>
             <input class="form-control" asp-for="Photos.PhotoId" />
         </div>
+
+        <div class="mb-3">
+            <label>Zdjęcie:</label>
+        </div>
+
 
         <button type="submit" class="btn btn-primary">Zapisz</button>
     </form>
