--- a/Biuro_Podrozy/Views/Biuro/Panel.cshtml
+++ b/Biuro_Podrozy/Views/Biuro/Panel.cshtml
@@ -17,20 +17,20 @@ Witaj! Twoje narzędzia:
 
 <div class="m-2">
     <h2>Wyloty</h2>
-    <a class="btn btn-primary" asp-action="AddForm" asp-controller="Biuro">Dodaj miasto</a>
-    <a class="btn btn-primary" asp-action="BiuroListAdmin" asp-controller="Biuro">Zarządzaj miastami</a>
+    <a class="btn btn-primary" asp-action="AddFormDep" asp-controller="Biuro">Dodaj miasto</a>
+    <a class="btn btn-primary" asp-action="DepartureList" asp-controller="Biuro">Zarządzaj miastami</a>
 </div>
 
 <div class="m-2">
     <h2>Zdjęcia</h2>
-    <a class="btn btn-primary" asp-action="AddForm" asp-controller="Biuro">Dodaj zdjęcie</a>
-    <a class="btn btn-primary" asp-action="BiuroListAdmin" asp-controller="Biuro">Zarządzaj zdjęciami</a>
+    <a class="btn btn-primary" asp-action="AddFormPhot" asp-controller="Biuro">Dodaj zdjęcie</a>
+    <a class="btn btn-primary" asp-action="PhotoList" asp-controller="Biuro">Zarządzaj zdjęciami</a>
 
 </div class="m-2">
 
 <div class="m-2">
     <h2>Rezerwacje</h2>
-    <a class="btn btn-primary" asp-action="BiuroListAdmin" asp-controller="Biuro">Zarządzaj rezerwacjami</a>
+    <a class="btn btn-primary" asp-action="BookList" asp-controller="Biuro">Zarządzaj rezerwacjami</a>
 
 </div>
 
