Nie działa edycja i usuwanie w panelu

--- a/Biuro_Podrozy/Views/Biuro/DepartureList.cshtml
+++ b/Biuro_Podrozy/Views/Biuro/DepartureList.cshtml
@@ -5,7 +5,7 @@
 @{
 }
 
-<h1>Podróże</h1>
+<h1>Miasta wylotu</h1>
 <table class="table table-striped">
     <tr>
         <th scope="col">Miasta:</th>
